Update STQD6324_Assignment1_P132829.ipynb with change name of Assignment

--- a/STQD6324_Assignment1_P132829.ipynb
+++ b/STQD6324_Assignment1_P132829.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# STQD6324 Data Management #\n",
     "# P132829 #\n",
-    "# Assignment 1 #"
+    "# Assignment_1 #"
    ]
   },
   {
