Delete the name

--- a/STQD6324_Assignment1_P132829.ipynb
+++ b/STQD6324_Assignment1_P132829.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# STQD6324 Data Management #\n",
-    "# P132829 Kamarul Arifin Bin Musa #\n",
-    "# Assignment_1 #"
+    "# P132829 #\n",
+    "# Assignment 1 #"
    ]
   },
   {
