Update STQD6324_Assignment1_P132829.ipynb add name

--- a/STQD6324_Assignment1_P132829.ipynb
+++ b/STQD6324_Assignment1_P132829.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# STQD6324 Data Management #\n",
-    "# P132829 #\n",
+    "# P132829 Kamarul Arifin #\n",
     "# Assignment 1 #"
    ]
   },
